# serializer version: 1
# name: test_closed_holes_touch
  tuple(
    set({
      X(1, 1)X(3, 1),
      X(1, 13)X(3, 13)X(1, 11)X(3, 11),
      X(1, 5)X(3, 5)X(1, 3)X(3, 3),
      X(1, 7)X(3, 7)X(1, 9)X(3, 9),
      X(11, 11)X(13, 11)X(11, 9)X(13, 9),
      X(11, 13)X(13, 13),
      X(11, 3)X(13, 3)X(11, 1)X(13, 1),
      X(11, 7)X(13, 7)X(11, 5)X(13, 5),
      X(3, 13)X(5, 13),
      X(3, 3)X(5, 3)X(3, 1)X(5, 1),
      X(3, 5)X(5, 3)X(3, 7)X(5, 7)X(7, 3)X(7, 5)X(3, 9)X(5, 9)X(3, 11)X(5, 11),
      X(5, 1)X(7, 1),
      X(5, 13)X(7, 13)X(5, 11)X(7, 11),
      X(5, 7)X(7, 7)X(5, 9)X(7, 9),
      X(7, 11)X(9, 11)X(7, 9)X(9, 9),
      X(7, 13)X(9, 13),
      X(7, 3)X(9, 3)X(7, 1)X(9, 1),
      X(7, 7)X(9, 7)X(7, 5)X(9, 5),
      X(9, 1)X(11, 1),
      X(9, 13)X(11, 13)X(9, 11)X(11, 11),
      X(9, 5)X(11, 5)X(9, 3)X(11, 3),
      X(9, 9)X(11, 9)X(9, 7)X(11, 7),
      Z(1, 11)Z(3, 11)Z(1, 9)Z(3, 9),
      Z(1, 13)Z(1, 11),
      Z(1, 3)Z(3, 3)Z(1, 1)Z(3, 1),
      Z(1, 5)Z(1, 3),
      Z(1, 7)Z(3, 7)Z(1, 5)Z(3, 5),
      Z(1, 9)Z(1, 7),
      Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
      Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
      Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
      Z(13, 11)Z(13, 9),
      Z(13, 3)Z(13, 1),
      Z(13, 7)Z(13, 5),
      Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
      Z(3, 3)Z(3, 5)Z(5, 3)Z(5, 7)Z(7, 5)Z(7, 7),
      Z(3, 7)Z(5, 7)Z(3, 9)Z(5, 9),
      Z(5, 11)Z(7, 11)Z(5, 9)Z(7, 9),
      Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
      Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
      Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
      Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
      Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
      Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
      Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
    }),
    tuple(
      6,
      6,
    ),
  )
# ---
# name: test_corner_hole_1
  list([
    tuple(
      set({
        X(1, 5)X(3, 5)X(1, 3)X(3, 3),
        X(1, 9)X(3, 9)X(1, 7)X(3, 7),
        X(3, 3)X(5, 3)X(3, 1)X(5, 1),
        X(3, 7)X(5, 7)X(3, 5)X(5, 5),
        X(3, 9)X(5, 9),
        X(5, 1)X(7, 1),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(5, 9)X(7, 9)X(5, 7)X(7, 7),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(7, 9)X(9, 9),
        Z(1, 3)Z(3, 3)Z(3, 1),
        Z(1, 5)Z(1, 3),
        Z(1, 7)Z(3, 7)Z(1, 5)Z(3, 5),
        Z(1, 9)Z(1, 7),
        Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
        Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 3)Z(9, 1),
        Z(9, 7)Z(9, 5),
      }),
      tuple(
        4,
        5,
      ),
    ),
    tuple(
      set({
        X(1, 5)X(3, 5)X(1, 3)X(3, 3),
        X(1, 9)X(3, 9)X(1, 7)X(3, 7),
        X(3, 3)X(5, 3)X(5, 1),
        X(3, 7)X(5, 7)X(3, 5)X(5, 5),
        X(3, 9)X(5, 9),
        X(5, 1)X(7, 1),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(5, 9)X(7, 9)X(5, 7)X(7, 7),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(7, 9)X(9, 9),
        Z(1, 5)Z(1, 3),
        Z(1, 7)Z(3, 7)Z(1, 5)Z(3, 5),
        Z(1, 9)Z(1, 7),
        Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
        Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 3)Z(9, 1),
        Z(9, 7)Z(9, 5),
      }),
      tuple(
        5,
        4,
      ),
    ),
  ])
# ---
# name: test_corner_hole_2
  list([
    tuple(
      set({
        X(1, 1)X(3, 1),
        X(1, 9)X(3, 9)X(1, 7)X(3, 7),
        X(3, 3)X(5, 3)X(3, 1)X(5, 1),
        X(3, 7)X(5, 7)X(3, 5)X(5, 5),
        X(3, 9)X(5, 9),
        X(5, 1)X(7, 1),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(5, 9)X(7, 9)X(5, 7)X(7, 7),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(7, 9)X(9, 9),
        Z(1, 7)Z(3, 7)Z(3, 5),
        Z(1, 9)Z(1, 7),
        Z(3, 3)Z(1, 1)Z(3, 1),
        Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
        Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 3)Z(9, 1),
        Z(9, 7)Z(9, 5),
      }),
      tuple(
        4,
        5,
      ),
    ),
    tuple(
      set({
        X(1, 9)X(3, 9)X(1, 7)X(3, 7),
        X(3, 3)X(5, 3)X(5, 1),
        X(3, 7)X(5, 7)X(3, 5)X(5, 5),
        X(3, 9)X(5, 9),
        X(5, 1)X(7, 1),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(5, 9)X(7, 9)X(5, 7)X(7, 7),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(7, 9)X(9, 9),
        Z(1, 7)Z(3, 7)Z(3, 5),
        Z(1, 9)Z(1, 7),
        Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
        Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 3)Z(9, 1),
        Z(9, 7)Z(9, 5),
      }),
      tuple(
        4,
        4,
      ),
    ),
    tuple(
      set({
        X(1, 5)X(3, 3)X(3, 5),
        X(1, 9)X(3, 9)X(1, 7)X(3, 7),
        X(3, 3)X(5, 3)X(5, 1),
        X(3, 7)X(5, 7)X(3, 5)X(5, 5),
        X(3, 9)X(5, 9),
        X(5, 1)X(7, 1),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(5, 9)X(7, 9)X(5, 7)X(7, 7),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(7, 9)X(9, 9),
        Z(1, 7)Z(3, 7)Z(1, 5)Z(3, 5),
        Z(1, 9)Z(1, 7),
        Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
        Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 3)Z(9, 1),
        Z(9, 7)Z(9, 5),
      }),
      tuple(
        5,
        3,
      ),
    ),
  ])
# ---
# name: test_corner_hole_touches_closed_hole
  list([
    tuple(
      set({
        X(1, 9)X(3, 9)X(1, 7)X(3, 7),
        X(3, 1)X(3, 3)X(3, 5)X(5, 1)X(5, 3)X(5, 5)X(3, 7)X(5, 7),
        X(3, 9)X(5, 9),
        X(5, 1)X(7, 1),
        X(5, 3)X(5, 5)X(7, 3)X(7, 5),
        X(5, 9)X(7, 9)X(5, 7)X(7, 7),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(7, 9)X(9, 9),
        Z(1, 7)Z(3, 7)Z(3, 5),
        Z(1, 9)Z(1, 7),
        Z(3, 1)Z(3, 3),
        Z(3, 3)Z(3, 5)Z(5, 3)Z(5, 5),
        Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 3)Z(9, 1),
        Z(9, 7)Z(9, 5),
      }),
      tuple(
        4,
        5,
      ),
    ),
    tuple(
      set({
        X(1, 9)X(3, 9)X(1, 7)X(3, 7),
        X(3, 3)X(3, 5)X(5, 1)X(5, 3)X(5, 5)X(3, 7)X(5, 7),
        X(3, 9)X(5, 9),
        X(5, 1)X(7, 1),
        X(5, 3)X(5, 5)X(7, 3)X(7, 5),
        X(5, 9)X(7, 9)X(5, 7)X(7, 7),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(7, 9)X(9, 9),
        Z(1, 7)Z(3, 7)Z(3, 5),
        Z(1, 9)Z(1, 7),
        Z(3, 3)Z(3, 5)Z(5, 3)Z(5, 5),
        Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 3)Z(9, 1),
        Z(9, 7)Z(9, 5),
      }),
      tuple(
        4,
        4,
      ),
    ),
    tuple(
      set({
        X(1, 9)X(3, 9)X(1, 7)X(3, 7),
        X(3, 3)X(1, 5)X(3, 5),
        X(3, 3)X(3, 5)X(5, 1)X(5, 3)X(5, 5)X(3, 7)X(5, 7),
        X(3, 9)X(5, 9),
        X(5, 1)X(7, 1),
        X(5, 3)X(5, 5)X(7, 3)X(7, 5),
        X(5, 9)X(7, 9)X(5, 7)X(7, 7),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(7, 9)X(9, 9),
        Z(1, 7)Z(3, 7)Z(1, 5)Z(3, 5),
        Z(1, 9)Z(1, 7),
        Z(3, 3)Z(3, 5)Z(5, 3)Z(5, 5),
        Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 3)Z(9, 1),
        Z(9, 7)Z(9, 5),
      }),
      tuple(
        5,
        3,
      ),
    ),
    tuple(
      set({
        X(1, 9)X(3, 9)X(1, 7)X(3, 7),
        X(3, 3)X(1, 5)X(3, 5)X(5, 3)X(5, 5)X(7, 3)X(7, 5),
        X(3, 3)X(5, 1)X(5, 3),
        X(3, 5)X(5, 5)X(3, 7)X(5, 7),
        X(3, 9)X(5, 9),
        X(5, 1)X(7, 1),
        X(5, 9)X(7, 9)X(5, 7)X(7, 7),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(7, 9)X(9, 9),
        Z(1, 7)Z(3, 7)Z(1, 5)Z(3, 5),
        Z(1, 9)Z(1, 7),
        Z(3, 3)Z(3, 5)Z(5, 3)Z(5, 5),
        Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 3)Z(9, 1),
        Z(9, 7)Z(9, 5),
      }),
      tuple(
        3,
        3,
      ),
    ),
    tuple(
      set({
        X(1, 9)X(3, 9)X(1, 7)X(3, 7),
        X(3, 1)X(3, 3)X(5, 1)X(5, 3),
        X(3, 5)X(5, 5)X(3, 7)X(5, 7),
        X(3, 9)X(5, 9),
        X(5, 1)X(7, 1),
        X(5, 9)X(7, 9)X(5, 7)X(7, 7),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(7, 9)X(9, 9),
        Z(1, 7)Z(3, 7)Z(3, 5),
        Z(1, 9)Z(1, 7),
        Z(3, 1)Z(3, 3),
        Z(3, 3)Z(5, 3),
        Z(3, 5)Z(5, 5),
        Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 3)Z(9, 1),
        Z(9, 7)Z(9, 5),
      }),
      tuple(
        2,
        5,
      ),
    ),
  ])
# ---
# name: test_deep_corner_hole
  tuple(
    set({
      X(1, 1)X(3, 1),
      X(1, 13)X(3, 13)X(1, 11)X(3, 11),
      X(1, 5)X(3, 5)X(1, 3)X(3, 3),
      X(1, 9)X(3, 9)X(1, 7)X(3, 7),
      X(11, 13)X(13, 13),
      X(11, 3)X(13, 3)X(11, 1)X(13, 1),
      X(11, 7)X(13, 7)X(11, 5)X(13, 5),
      X(3, 13)X(5, 13),
      X(3, 3)X(5, 3)X(3, 1)X(5, 1),
      X(3, 7)X(5, 7)X(3, 5)X(5, 5),
      X(5, 1)X(7, 1),
      X(5, 13)X(7, 13)X(5, 11)X(7, 11),
      X(5, 5)X(7, 5)X(5, 3)X(7, 3),
      X(5, 7)X(7, 7)X(3, 9)X(7, 9)X(3, 11)X(5, 11),
      X(7, 13)X(9, 13),
      X(7, 3)X(9, 3)X(7, 1)X(9, 1),
      X(7, 5)X(7, 7)X(7, 9)X(9, 5)X(9, 7)X(9, 9)X(7, 11)X(11, 11)X(9, 13)X(11, 13),
      X(9, 1)X(11, 1),
      X(9, 5)X(11, 5)X(9, 3)X(11, 3),
      Z(1, 11)Z(3, 11)Z(1, 9)Z(3, 9),
      Z(1, 13)Z(1, 11),
      Z(1, 3)Z(3, 3)Z(1, 1)Z(3, 1),
      Z(1, 5)Z(1, 3),
      Z(1, 7)Z(3, 7)Z(1, 5)Z(3, 5),
      Z(1, 9)Z(1, 7),
      Z(11, 13)Z(13, 13)Z(11, 11),
      Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
      Z(13, 3)Z(13, 1),
      Z(13, 7)Z(11, 7),
      Z(13, 7)Z(13, 5),
      Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
      Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
      Z(3, 7)Z(5, 7)Z(3, 9)Z(7, 9)Z(5, 11)Z(7, 11),
      Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
      Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
      Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
      Z(7, 7)Z(7, 9)Z(9, 7)Z(9, 9),
      Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
      Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
      Z(9, 9)Z(7, 11)Z(11, 11)Z(7, 13)Z(9, 13),
    }),
    tuple(
      4,
      6,
    ),
  )
# ---
# name: test_edge_defect
  tuple(
    set({
      X(1, 1)X(3, 1),
      X(1, 9)X(3, 9)X(1, 7)X(3, 7),
      X(3, 3)X(5, 3)X(3, 1)X(5, 1),
      X(3, 7)X(5, 7)X(3, 5)X(5, 5),
      X(3, 9)X(5, 9),
      X(5, 1)X(7, 1),
      X(5, 5)X(7, 5)X(5, 3)X(7, 3),
      X(5, 9)X(7, 9)X(5, 7)X(7, 7),
      X(7, 3)X(9, 3)X(7, 1)X(9, 1),
      X(7, 7)X(9, 7)X(7, 5)X(9, 5),
      X(7, 9)X(9, 9),
      Z(1, 9)Z(1, 7),
      Z(3, 3)Z(1, 1)Z(3, 1),
      Z(3, 5)Z(1, 7)Z(3, 7),
      Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
      Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
      Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
      Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
      Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
      Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
      Z(9, 3)Z(9, 1),
      Z(9, 7)Z(9, 5),
    }),
    tuple(
      4,
      5,
    ),
  )
# ---
# name: test_edge_hole_becomes_corner_hole
  list([
    tuple(
      set({
        X(1, 1)X(3, 1),
        X(1, 13)X(3, 13)X(1, 11)X(3, 11),
        X(1, 17)X(3, 17)X(1, 15)X(3, 15),
        X(1, 5)X(3, 5)X(1, 3)X(3, 3),
        X(1, 7)X(3, 7)X(1, 9)X(3, 9),
        X(11, 11)X(13, 11)X(11, 9)X(13, 9),
        X(11, 15)X(13, 15)X(11, 13)X(13, 13),
        X(11, 17)X(13, 17),
        X(11, 3)X(13, 3)X(11, 1)X(13, 1),
        X(11, 7)X(13, 7)X(11, 5)X(13, 5),
        X(13, 1)X(15, 1),
        X(13, 13)X(15, 13)X(13, 11)X(15, 11),
        X(13, 17)X(15, 17)X(13, 15)X(15, 15),
        X(13, 5)X(15, 5)X(13, 3)X(15, 3),
        X(13, 9)X(15, 9)X(13, 7)X(15, 7),
        X(15, 11)X(17, 11)X(15, 9)X(17, 9),
        X(15, 15)X(17, 15)X(15, 13)X(17, 13),
        X(15, 17)X(17, 17),
        X(15, 3)X(17, 3)X(15, 1)X(17, 1),
        X(15, 7)X(17, 7)X(15, 5)X(17, 5),
        X(3, 15)X(5, 15)X(3, 13)X(5, 13),
        X(3, 17)X(5, 17),
        X(3, 3)X(5, 3)X(3, 1)X(5, 1),
        X(3, 7)X(5, 7)X(3, 5)X(5, 5),
        X(3, 9)X(5, 9)X(3, 11)X(7, 11)X(5, 13)X(9, 13)X(7, 15)X(11, 15)X(9, 17)X(11, 17),
        X(5, 1)X(7, 1),
        X(5, 17)X(7, 17)X(5, 15)X(7, 15),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(5, 9)X(7, 9)X(5, 7)X(7, 7),
        X(7, 11)X(9, 11)X(7, 9)X(9, 9),
        X(7, 17)X(9, 17),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(9, 1)X(11, 1),
        X(9, 13)X(11, 13)X(9, 11)X(11, 11),
        X(9, 5)X(11, 5)X(9, 3)X(11, 3),
        X(9, 9)X(11, 9)X(9, 7)X(11, 7),
        Z(1, 13)Z(1, 11),
        Z(1, 15)Z(3, 15)Z(1, 13)Z(3, 13),
        Z(1, 17)Z(1, 15),
        Z(1, 3)Z(3, 3)Z(1, 1)Z(3, 1),
        Z(1, 5)Z(1, 3),
        Z(1, 5)Z(3, 5)Z(1, 7)Z(3, 7),
        Z(1, 7)Z(3, 7)Z(5, 7)Z(1, 9)Z(3, 9)Z(5, 9),
        Z(1, 9)Z(3, 9)Z(1, 11)Z(3, 11),
        Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
        Z(11, 17)Z(13, 17)Z(11, 15)Z(13, 15),
        Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
        Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
        Z(13, 11)Z(15, 11)Z(13, 9)Z(15, 9),
        Z(13, 15)Z(15, 15)Z(13, 13)Z(15, 13),
        Z(13, 3)Z(15, 3)Z(13, 1)Z(15, 1),
        Z(13, 7)Z(15, 7)Z(13, 5)Z(15, 5),
        Z(15, 13)Z(17, 13)Z(15, 11)Z(17, 11),
        Z(15, 17)Z(17, 17)Z(15, 15)Z(17, 15),
        Z(15, 5)Z(17, 5)Z(15, 3)Z(17, 3),
        Z(15, 9)Z(17, 9)Z(15, 7)Z(17, 7),
        Z(17, 11)Z(17, 9),
        Z(17, 15)Z(17, 13),
        Z(17, 3)Z(17, 1),
        Z(17, 7)Z(17, 5),
        Z(3, 17)Z(5, 17)Z(3, 15)Z(5, 15),
        Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
        Z(5, 9)Z(7, 9)Z(3, 11)Z(7, 11)Z(3, 13)Z(5, 13),
        Z(7, 11)Z(9, 11)Z(5, 13)Z(9, 13)Z(5, 15)Z(7, 15),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
        Z(9, 13)Z(11, 13)Z(7, 15)Z(11, 15)Z(7, 17)Z(9, 17),
        Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
        Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
      }),
      tuple(
        6,
        8,
      ),
    ),
    tuple(
      set({
        X(1, 1)X(3, 1),
        X(1, 13)X(3, 13)X(1, 11)X(3, 11),
        X(1, 17)X(3, 17)X(1, 15)X(3, 15),
        X(1, 5)X(3, 5)X(1, 3)X(3, 3),
        X(1, 7)X(3, 7)X(1, 9)X(3, 9),
        X(11, 11)X(13, 11)X(11, 9)X(13, 9),
        X(11, 15)X(13, 15)X(11, 13)X(13, 13),
        X(11, 17)X(13, 17),
        X(11, 3)X(13, 3)X(11, 1)X(13, 1),
        X(11, 7)X(13, 7)X(11, 5)X(13, 5),
        X(13, 1)X(15, 1),
        X(13, 13)X(15, 13)X(13, 11)X(15, 11),
        X(13, 17)X(15, 17)X(13, 15)X(15, 15),
        X(13, 5)X(15, 5)X(13, 3)X(15, 3),
        X(13, 9)X(15, 9)X(13, 7)X(15, 7),
        X(15, 11)X(17, 11)X(15, 9)X(17, 9),
        X(15, 15)X(17, 15)X(15, 13)X(17, 13),
        X(15, 17)X(17, 17),
        X(15, 3)X(17, 3)X(15, 1)X(17, 1),
        X(15, 7)X(17, 7)X(15, 5)X(17, 5),
        X(3, 15)X(5, 15)X(3, 13)X(5, 13),
        X(3, 17)X(5, 17),
        X(3, 3)X(5, 3)X(3, 1)X(5, 1),
        X(3, 7)X(5, 7)X(3, 5)X(5, 5),
        X(3, 9)X(5, 9)X(3, 11)X(7, 11)X(5, 13)X(9, 13)X(7, 15)X(11, 15)X(9, 17)X(11, 17),
        X(5, 1)X(7, 1),
        X(5, 17)X(7, 17)X(5, 15)X(7, 15),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(5, 9)X(7, 9)X(5, 7)X(7, 7),
        X(7, 11)X(9, 11)X(7, 9)X(9, 9),
        X(7, 17)X(9, 17),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(9, 1)X(11, 1),
        X(9, 13)X(11, 13)X(9, 11)X(11, 11),
        X(9, 5)X(11, 5)X(9, 3)X(11, 3),
        X(9, 9)X(11, 9)X(9, 7)X(11, 7),
        Z(1, 13)Z(1, 11),
        Z(1, 15)Z(3, 15)Z(1, 13)Z(3, 13),
        Z(1, 17)Z(1, 15),
        Z(1, 3)Z(3, 3)Z(1, 1)Z(3, 1),
        Z(1, 5)Z(1, 3),
        Z(1, 5)Z(3, 5)Z(1, 7)Z(3, 7)Z(1, 9)Z(3, 9)Z(1, 11)Z(3, 11),
        Z(1, 7)Z(1, 9),
        Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
        Z(11, 17)Z(13, 17)Z(11, 15)Z(13, 15),
        Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
        Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
        Z(13, 11)Z(15, 11)Z(13, 9)Z(15, 9),
        Z(13, 15)Z(15, 15)Z(13, 13)Z(15, 13),
        Z(13, 3)Z(15, 3)Z(13, 1)Z(15, 1),
        Z(13, 7)Z(15, 7)Z(13, 5)Z(15, 5),
        Z(15, 13)Z(17, 13)Z(15, 11)Z(17, 11),
        Z(15, 17)Z(17, 17)Z(15, 15)Z(17, 15),
        Z(15, 5)Z(17, 5)Z(15, 3)Z(17, 3),
        Z(15, 9)Z(17, 9)Z(15, 7)Z(17, 7),
        Z(17, 11)Z(17, 9),
        Z(17, 15)Z(17, 13),
        Z(17, 3)Z(17, 1),
        Z(17, 7)Z(17, 5),
        Z(3, 17)Z(5, 17)Z(3, 15)Z(5, 15),
        Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
        Z(3, 7)Z(5, 7)Z(3, 9)Z(5, 9),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
        Z(5, 9)Z(7, 9)Z(3, 11)Z(7, 11)Z(3, 13)Z(5, 13),
        Z(7, 11)Z(9, 11)Z(5, 13)Z(9, 13)Z(5, 15)Z(7, 15),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
        Z(9, 13)Z(11, 13)Z(7, 15)Z(11, 15)Z(7, 17)Z(9, 17),
        Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
        Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
      }),
      tuple(
        6,
        7,
      ),
    ),
  ])
# ---
# name: test_edge_hole_touches_closed_hole_1
  tuple(
    set({
      X(1, 1)X(3, 1),
      X(1, 13)X(3, 13)X(1, 11)X(3, 11),
      X(1, 5)X(3, 5)X(1, 3)X(3, 3),
      X(11, 11)X(13, 11)X(11, 9)X(13, 9),
      X(11, 13)X(13, 13),
      X(11, 3)X(13, 3)X(11, 1)X(13, 1),
      X(11, 7)X(13, 7)X(11, 5)X(13, 5),
      X(3, 11)X(5, 11)X(3, 9)X(5, 9),
      X(3, 13)X(5, 13),
      X(3, 3)X(5, 3)X(3, 1)X(5, 1),
      X(5, 1)X(7, 1),
      X(5, 13)X(7, 13)X(5, 11)X(7, 11),
      X(5, 5)X(7, 5)X(5, 3)X(7, 3),
      X(5, 9)X(7, 9)X(5, 7)X(7, 7),
      X(7, 11)X(9, 11)X(7, 9)X(9, 9),
      X(7, 13)X(9, 13),
      X(7, 3)X(9, 3)X(7, 1)X(9, 1),
      X(7, 7)X(9, 7)X(7, 5)X(9, 5),
      X(9, 1)X(11, 1),
      X(9, 13)X(11, 13)X(9, 11)X(11, 11),
      X(9, 5)X(11, 5)X(9, 3)X(11, 3),
      X(9, 9)X(11, 9)X(9, 7)X(11, 7),
      Z(1, 13)Z(1, 11),
      Z(1, 3)Z(3, 3)Z(1, 1)Z(3, 1),
      Z(1, 5)Z(1, 3),
      Z(1, 5)Z(3, 5),
      Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
      Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
      Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
      Z(13, 11)Z(13, 9),
      Z(13, 3)Z(13, 1),
      Z(13, 7)Z(13, 5),
      Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
      Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
      Z(3, 9)Z(1, 11)Z(3, 11),
      Z(3, 9)Z(5, 9)Z(5, 7),
      Z(5, 11)Z(7, 11)Z(5, 9)Z(7, 9),
      Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
      Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
      Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
      Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
      Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
      Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
      Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
      Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
    }),
    tuple(
      5,
      7,
    ),
  )
# ---
# name: test_edge_hole_touches_closed_hole_2
  tuple(
    set({
      X(1, 1)X(3, 1),
      X(1, 13)X(3, 13)X(1, 11)X(3, 11),
      X(1, 3)X(3, 3)X(1, 5)X(5, 5)X(3, 7)X(5, 7),
      X(11, 11)X(13, 11)X(11, 9)X(13, 9),
      X(11, 13)X(13, 13),
      X(11, 3)X(13, 3)X(11, 1)X(13, 1),
      X(11, 7)X(13, 7)X(11, 5)X(13, 5),
      X(3, 11)X(5, 11)X(3, 9)X(5, 9),
      X(3, 13)X(5, 13),
      X(3, 3)X(5, 3)X(3, 1)X(5, 1),
      X(5, 1)X(7, 1),
      X(5, 13)X(7, 13)X(5, 11)X(7, 11),
      X(5, 5)X(7, 5)X(5, 3)X(7, 3),
      X(5, 9)X(7, 9)X(5, 7)X(7, 7),
      X(7, 11)X(9, 11)X(7, 9)X(9, 9),
      X(7, 13)X(9, 13),
      X(7, 3)X(9, 3)X(7, 1)X(9, 1),
      X(7, 7)X(9, 7)X(7, 5)X(9, 5),
      X(9, 1)X(11, 1),
      X(9, 13)X(11, 13)X(9, 11)X(11, 11),
      X(9, 5)X(11, 5)X(9, 3)X(11, 3),
      X(9, 9)X(11, 9)X(9, 7)X(11, 7),
      Z(1, 11)Z(3, 11)Z(3, 9),
      Z(1, 13)Z(1, 11),
      Z(1, 3)Z(3, 3)Z(1, 1)Z(3, 1),
      Z(1, 5)Z(1, 3),
      Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
      Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
      Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
      Z(13, 11)Z(13, 9),
      Z(13, 3)Z(13, 1),
      Z(13, 7)Z(13, 5),
      Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
      Z(3, 3)Z(1, 5)Z(5, 3)Z(5, 5)Z(3, 7),
      Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
      Z(5, 11)Z(7, 11)Z(5, 9)Z(7, 9),
      Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
      Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
      Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
      Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
      Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
      Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
      Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
      Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
    }),
    tuple(
      6,
      6,
    ),
  )
# ---
# name: test_edge_hole_touches_closed_hole_3
  tuple(
    set({
      X(1, 1)X(3, 1),
      X(1, 13)X(3, 13)X(1, 11)X(3, 11),
      X(1, 3)X(3, 3)X(1, 5)X(5, 5)X(3, 7)X(5, 7),
      X(11, 11)X(13, 11)X(11, 9)X(13, 9),
      X(11, 13)X(13, 13),
      X(11, 3)X(13, 3)X(11, 1)X(13, 1),
      X(11, 7)X(13, 7)X(11, 5)X(13, 5),
      X(3, 11)X(5, 11)X(3, 9)X(5, 9),
      X(3, 13)X(5, 13),
      X(3, 3)X(5, 3)X(3, 1)X(5, 1),
      X(5, 1)X(7, 1),
      X(5, 13)X(7, 13)X(5, 11)X(7, 11),
      X(5, 5)X(7, 5)X(5, 3)X(7, 3),
      X(5, 9)X(7, 9)X(5, 7)X(7, 7),
      X(7, 11)X(9, 11)X(7, 9)X(9, 9),
      X(7, 13)X(9, 13),
      X(7, 3)X(9, 3)X(7, 1)X(9, 1),
      X(7, 7)X(9, 7)X(7, 5)X(9, 5),
      X(9, 1)X(11, 1),
      X(9, 13)X(11, 13)X(9, 11)X(11, 11),
      X(9, 5)X(11, 5)X(9, 3)X(11, 3),
      X(9, 9)X(11, 9)X(9, 7)X(11, 7),
      Z(1, 13)Z(1, 11),
      Z(1, 3)Z(3, 3)Z(1, 1)Z(3, 1),
      Z(1, 5)Z(1, 3),
      Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
      Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
      Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
      Z(13, 11)Z(13, 9),
      Z(13, 3)Z(13, 1),
      Z(13, 7)Z(13, 5),
      Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
      Z(3, 3)Z(1, 5)Z(5, 3)Z(5, 5)Z(3, 7),
      Z(3, 9)Z(1, 11)Z(3, 11),
      Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
      Z(5, 11)Z(7, 11)Z(5, 9)Z(7, 9),
      Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
      Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
      Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
      Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
      Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
      Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
      Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
      Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
    }),
    tuple(
      6,
      6,
    ),
  )
# ---
# name: test_edge_hole_touches_closed_hole_4
  tuple(
    set({
      X(1, 1)X(3, 1),
      X(1, 13)X(3, 13)X(1, 11)X(3, 11),
      X(1, 3)X(3, 3)X(1, 5)X(5, 5)X(3, 7)X(5, 7),
      X(11, 11)X(13, 11)X(11, 9)X(13, 9),
      X(11, 13)X(13, 13),
      X(11, 3)X(13, 3)X(11, 1)X(13, 1),
      X(11, 7)X(13, 7)X(11, 5)X(13, 5),
      X(3, 13)X(5, 13),
      X(3, 3)X(5, 3)X(3, 1)X(5, 1),
      X(5, 1)X(7, 1),
      X(5, 13)X(7, 13)X(5, 11)X(7, 11),
      X(5, 5)X(7, 5)X(5, 3)X(7, 3),
      X(5, 9)X(7, 9)X(5, 7)X(7, 7),
      X(7, 11)X(9, 11)X(7, 9)X(9, 9),
      X(7, 13)X(9, 13),
      X(7, 3)X(9, 3)X(7, 1)X(9, 1),
      X(7, 7)X(9, 7)X(7, 5)X(9, 5),
      X(9, 1)X(11, 1),
      X(9, 13)X(11, 13)X(9, 11)X(11, 11),
      X(9, 5)X(11, 5)X(9, 3)X(11, 3),
      X(9, 9)X(11, 9)X(9, 7)X(11, 7),
      Z(1, 11)Z(3, 11),
      Z(1, 13)Z(1, 11),
      Z(1, 3)Z(3, 3)Z(1, 1)Z(3, 1),
      Z(1, 5)Z(1, 3),
      Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
      Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
      Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
      Z(13, 11)Z(13, 9),
      Z(13, 3)Z(13, 1),
      Z(13, 7)Z(13, 5),
      Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
      Z(3, 3)Z(1, 5)Z(5, 3)Z(5, 5)Z(3, 7),
      Z(3, 7)Z(5, 9)Z(5, 7),
      Z(5, 11)Z(7, 11)Z(5, 9)Z(7, 9),
      Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
      Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
      Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
      Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
      Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
      Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
      Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
      Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
    }),
    tuple(
      5,
      6,
    ),
  )
# ---
# name: test_edge_hole_touches_closed_hole_5
  list([
    tuple(
      set({
        X(1, 1)X(3, 1),
        X(1, 13)X(3, 13)X(1, 11)X(3, 11),
        X(11, 11)X(13, 11)X(11, 9)X(13, 9),
        X(11, 13)X(13, 13),
        X(11, 3)X(13, 3)X(11, 1)X(13, 1),
        X(11, 7)X(13, 7)X(11, 5)X(13, 5),
        X(3, 11)X(5, 11)X(3, 9)X(5, 9),
        X(3, 13)X(5, 13),
        X(3, 3)X(5, 3)X(3, 1)X(5, 1),
        X(3, 5)X(5, 5)X(3, 7)X(7, 7)X(5, 9)X(7, 9),
        X(5, 1)X(7, 1),
        X(5, 13)X(7, 13)X(5, 11)X(7, 11),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(7, 11)X(9, 11)X(7, 9)X(9, 9),
        X(7, 13)X(9, 13),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(9, 1)X(11, 1),
        X(9, 13)X(11, 13)X(9, 11)X(11, 11),
        X(9, 5)X(11, 5)X(9, 3)X(11, 3),
        X(9, 9)X(11, 9)X(9, 7)X(11, 7),
        Z(1, 11)Z(3, 11)Z(3, 9),
        Z(1, 13)Z(1, 11),
        Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
        Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
        Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
        Z(13, 11)Z(13, 9),
        Z(13, 3)Z(13, 1),
        Z(13, 7)Z(13, 5),
        Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
        Z(3, 3)Z(1, 1)Z(3, 1),
        Z(3, 5)Z(3, 7),
        Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
        Z(5, 11)Z(7, 11)Z(5, 9)Z(7, 9),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 5)Z(3, 7)Z(7, 5)Z(7, 7)Z(3, 9)Z(5, 9),
        Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
        Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
        Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
      }),
      tuple(
        5,
        6,
      ),
    ),
    tuple(
      set({
        X(1, 1)X(3, 1),
        X(1, 13)X(3, 13)X(1, 11)X(3, 11),
        X(1, 7)X(3, 7)X(1, 9)X(3, 9),
        X(11, 11)X(13, 11)X(11, 9)X(13, 9),
        X(11, 13)X(13, 13),
        X(11, 3)X(13, 3)X(11, 1)X(13, 1),
        X(11, 7)X(13, 7)X(11, 5)X(13, 5),
        X(3, 11)X(5, 11)X(3, 9)X(5, 9),
        X(3, 13)X(5, 13),
        X(3, 3)X(5, 3)X(3, 1)X(5, 1),
        X(5, 1)X(7, 1),
        X(5, 13)X(7, 13)X(5, 11)X(7, 11),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(7, 11)X(9, 11)X(7, 9)X(9, 9),
        X(7, 13)X(9, 13),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(9, 1)X(11, 1),
        X(9, 13)X(11, 13)X(9, 11)X(11, 11),
        X(9, 5)X(11, 5)X(9, 3)X(11, 3),
        X(9, 9)X(11, 9)X(9, 7)X(11, 7),
        Z(1, 11)Z(3, 11)Z(1, 9)Z(3, 9),
        Z(1, 13)Z(1, 11),
        Z(1, 7)Z(3, 7),
        Z(1, 9)Z(1, 7),
        Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
        Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
        Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
        Z(13, 11)Z(13, 9),
        Z(13, 3)Z(13, 1),
        Z(13, 7)Z(13, 5),
        Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
        Z(3, 3)Z(1, 1)Z(3, 1),
        Z(3, 9)Z(3, 7)Z(5, 9),
        Z(5, 11)Z(7, 11)Z(5, 9)Z(7, 9),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 5)Z(5, 3)Z(3, 3),
        Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 7)Z(5, 5)Z(7, 5),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
        Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
        Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
      }),
      tuple(
        4,
        7,
      ),
    ),
  ])
# ---
# name: test_edge_hole_touches_closed_hole_6
  list([
    tuple(
      set({
        X(1, 1)X(3, 1),
        X(1, 13)X(3, 13)X(1, 11)X(3, 11),
        X(1, 3)X(3, 3)X(1, 5)X(3, 5),
        X(1, 9)X(3, 9)X(1, 7)X(3, 7),
        X(11, 11)X(13, 11)X(11, 9)X(13, 9),
        X(11, 13)X(13, 13),
        X(11, 3)X(13, 3)X(11, 1)X(13, 1),
        X(11, 7)X(13, 7)X(11, 5)X(13, 5),
        X(3, 11)X(5, 11)X(3, 9)X(5, 9),
        X(3, 13)X(5, 13),
        X(3, 3)X(5, 3)X(3, 1)X(5, 1),
        X(3, 5)X(5, 5)X(3, 7)X(7, 7)X(5, 9)X(7, 9),
        X(5, 1)X(7, 1),
        X(5, 13)X(7, 13)X(5, 11)X(7, 11),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(7, 11)X(9, 11)X(7, 9)X(9, 9),
        X(7, 13)X(9, 13),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(9, 1)X(11, 1),
        X(9, 13)X(11, 13)X(9, 11)X(11, 11),
        X(9, 5)X(11, 5)X(9, 3)X(11, 3),
        X(9, 9)X(11, 9)X(9, 7)X(11, 7),
        Z(1, 1)Z(1, 3)Z(3, 1)Z(3, 3),
        Z(1, 11)Z(3, 11)Z(1, 9)Z(3, 9),
        Z(1, 13)Z(1, 11),
        Z(1, 3)Z(3, 3)Z(1, 5)Z(3, 5)Z(5, 3)Z(5, 5),
        Z(1, 5)Z(3, 5)Z(1, 7)Z(3, 7),
        Z(1, 9)Z(1, 7),
        Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
        Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
        Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
        Z(13, 11)Z(13, 9),
        Z(13, 3)Z(13, 1),
        Z(13, 7)Z(13, 5),
        Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
        Z(5, 11)Z(7, 11)Z(5, 9)Z(7, 9),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 5)Z(3, 7)Z(7, 5)Z(7, 7)Z(3, 9)Z(5, 9),
        Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
        Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
        Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
      }),
      tuple(
        6,
        6,
      ),
    ),
    tuple(
      set({
        X(1, 1)X(3, 1),
        X(1, 13)X(3, 13)X(1, 11)X(3, 11),
        X(1, 3)X(3, 3)X(1, 5)X(3, 5),
        X(1, 9)X(3, 9)X(1, 7)X(3, 7),
        X(11, 11)X(13, 11)X(11, 9)X(13, 9),
        X(11, 13)X(13, 13),
        X(11, 3)X(13, 3)X(11, 1)X(13, 1),
        X(11, 7)X(13, 7)X(11, 5)X(13, 5),
        X(3, 11)X(5, 11)X(3, 9)X(5, 9),
        X(3, 13)X(5, 13),
        X(3, 3)X(5, 3)X(3, 1)X(5, 1),
        X(3, 5)X(5, 5)X(3, 7)X(7, 7)X(5, 9)X(7, 9),
        X(5, 1)X(7, 1),
        X(5, 13)X(7, 13)X(5, 11)X(7, 11),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(7, 11)X(9, 11)X(7, 9)X(9, 9),
        X(7, 13)X(9, 13),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(9, 1)X(11, 1),
        X(9, 13)X(11, 13)X(9, 11)X(11, 11),
        X(9, 5)X(11, 5)X(9, 3)X(11, 3),
        X(9, 9)X(11, 9)X(9, 7)X(11, 7),
        Z(1, 1)Z(1, 3)Z(3, 1)Z(3, 3)Z(1, 5)Z(3, 5)Z(1, 7)Z(3, 7),
        Z(1, 11)Z(3, 11)Z(1, 9)Z(3, 9),
        Z(1, 13)Z(1, 11),
        Z(1, 3)Z(1, 5),
        Z(1, 9)Z(1, 7),
        Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
        Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
        Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
        Z(13, 11)Z(13, 9),
        Z(13, 3)Z(13, 1),
        Z(13, 7)Z(13, 5),
        Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
        Z(3, 3)Z(3, 5)Z(5, 3)Z(5, 5),
        Z(5, 11)Z(7, 11)Z(5, 9)Z(7, 9),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 5)Z(3, 7)Z(7, 5)Z(7, 7)Z(3, 9)Z(5, 9),
        Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
        Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
        Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
      }),
      tuple(
        6,
        5,
      ),
    ),
  ])
# ---
# name: test_edge_hole_touches_closed_hole_7
  list([
    tuple(
      set({
        X(1, 1)X(3, 1),
        X(1, 13)X(3, 13)X(1, 11)X(3, 11),
        X(1, 5)X(3, 5)X(1, 3)X(3, 3),
        X(1, 7)X(3, 7)X(1, 9)X(3, 9),
        X(11, 11)X(13, 11)X(11, 9)X(13, 9),
        X(11, 13)X(13, 13),
        X(11, 3)X(13, 3)X(11, 1)X(13, 1),
        X(11, 7)X(13, 7)X(11, 5)X(13, 5),
        X(3, 13)X(5, 13),
        X(3, 3)X(5, 3)X(3, 1)X(5, 1),
        X(3, 5)X(5, 5)X(3, 7)X(7, 7)X(3, 9)X(7, 9)X(3, 11)X(5, 11),
        X(5, 1)X(7, 1),
        X(5, 13)X(7, 13)X(5, 11)X(7, 11),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(7, 11)X(9, 11)X(7, 9)X(9, 9),
        X(7, 13)X(9, 13),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(9, 1)X(11, 1),
        X(9, 13)X(11, 13)X(9, 11)X(11, 11),
        X(9, 5)X(11, 5)X(9, 3)X(11, 3),
        X(9, 9)X(11, 9)X(9, 7)X(11, 7),
        Z(1, 11)Z(3, 11)Z(1, 9)Z(3, 9),
        Z(1, 13)Z(1, 11),
        Z(1, 3)Z(3, 3)Z(1, 1)Z(3, 1),
        Z(1, 5)Z(1, 3),
        Z(1, 7)Z(3, 7)Z(1, 5)Z(3, 5),
        Z(1, 9)Z(1, 7),
        Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
        Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
        Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
        Z(13, 11)Z(13, 9),
        Z(13, 3)Z(13, 1),
        Z(13, 7)Z(13, 5),
        Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
        Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 5)Z(3, 7)Z(7, 5)Z(7, 7)Z(3, 9)Z(7, 9)Z(5, 11)Z(7, 11),
        Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
        Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
        Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
      }),
      tuple(
        6,
        5,
      ),
    ),
    tuple(
      set({
        X(1, 1)X(3, 1),
        X(1, 13)X(3, 13)X(1, 11)X(3, 11),
        X(1, 5)X(3, 5)X(1, 3)X(3, 3),
        X(11, 11)X(13, 11)X(11, 9)X(13, 9),
        X(11, 13)X(13, 13),
        X(11, 3)X(13, 3)X(11, 1)X(13, 1),
        X(11, 7)X(13, 7)X(11, 5)X(13, 5),
        X(3, 13)X(5, 13),
        X(3, 3)X(5, 3)X(3, 1)X(5, 1),
        X(3, 5)X(5, 5)X(1, 7)X(7, 7)X(1, 9)X(3, 9)X(5, 9)X(7, 9),
        X(3, 9)X(5, 9)X(3, 11)X(5, 11),
        X(5, 1)X(7, 1),
        X(5, 13)X(7, 13)X(5, 11)X(7, 11),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(7, 11)X(9, 11)X(7, 9)X(9, 9),
        X(7, 13)X(9, 13),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(9, 1)X(11, 1),
        X(9, 13)X(11, 13)X(9, 11)X(11, 11),
        X(9, 5)X(11, 5)X(9, 3)X(11, 3),
        X(9, 9)X(11, 9)X(9, 7)X(11, 7),
        Z(1, 11)Z(3, 11)Z(1, 9)Z(3, 9),
        Z(1, 13)Z(1, 11),
        Z(1, 3)Z(3, 3)Z(1, 1)Z(3, 1),
        Z(1, 5)Z(1, 3),
        Z(1, 5)Z(3, 5)Z(5, 5)Z(1, 7)Z(7, 5)Z(7, 7)Z(3, 9)Z(5, 9),
        Z(1, 9)Z(1, 7),
        Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
        Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
        Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
        Z(13, 11)Z(13, 9),
        Z(13, 3)Z(13, 1),
        Z(13, 7)Z(13, 5),
        Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
        Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
        Z(5, 11)Z(7, 11)Z(5, 9)Z(7, 9),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
        Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
        Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
      }),
      tuple(
        5,
        6,
      ),
    ),
  ])
# ---
# name: test_edge_hole_touches_closed_hole_8
  list([
    tuple(
      set({
        X(1, 1)X(3, 1),
        X(1, 13)X(3, 13)X(1, 11)X(3, 11),
        X(1, 5)X(3, 5)X(1, 3)X(3, 3),
        X(11, 11)X(13, 11)X(11, 9)X(13, 9),
        X(11, 13)X(13, 13),
        X(11, 3)X(13, 3)X(11, 1)X(13, 1),
        X(11, 7)X(13, 7)X(11, 5)X(13, 5),
        X(3, 11)X(5, 11)X(3, 9)X(5, 9),
        X(3, 13)X(5, 13),
        X(3, 3)X(5, 3)X(3, 1)X(5, 1),
        X(3, 5)X(5, 5)X(3, 7)X(7, 7)X(5, 9)X(7, 9),
        X(5, 1)X(7, 1),
        X(5, 13)X(7, 13)X(5, 11)X(7, 11),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(7, 11)X(9, 11)X(7, 9)X(9, 9),
        X(7, 13)X(9, 13),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(9, 1)X(11, 1),
        X(9, 13)X(11, 13)X(9, 11)X(11, 11),
        X(9, 5)X(11, 5)X(9, 3)X(11, 3),
        X(9, 9)X(11, 9)X(9, 7)X(11, 7),
        Z(1, 13)Z(1, 11),
        Z(1, 3)Z(3, 3)Z(1, 1)Z(3, 1),
        Z(1, 5)Z(1, 3),
        Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
        Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
        Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
        Z(13, 11)Z(13, 9),
        Z(13, 3)Z(13, 1),
        Z(13, 7)Z(13, 5),
        Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
        Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
        Z(3, 7)Z(1, 5)Z(3, 5),
        Z(3, 9)Z(1, 11)Z(3, 11),
        Z(5, 11)Z(7, 11)Z(5, 9)Z(7, 9),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 5)Z(3, 7)Z(7, 5)Z(7, 7)Z(3, 9)Z(5, 9),
        Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
        Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
        Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
      }),
      tuple(
        5,
        6,
      ),
    ),
    tuple(
      set({
        X(1, 1)X(3, 1),
        X(1, 13)X(3, 13)X(1, 11)X(3, 11),
        X(1, 5)X(3, 5)X(1, 3)X(3, 3),
        X(11, 11)X(13, 11)X(11, 9)X(13, 9),
        X(11, 13)X(13, 13),
        X(11, 3)X(13, 3)X(11, 1)X(13, 1),
        X(11, 7)X(13, 7)X(11, 5)X(13, 5),
        X(3, 13)X(5, 13),
        X(3, 3)X(5, 3)X(3, 1)X(5, 1),
        X(3, 5)X(5, 5)X(3, 7)X(7, 7)X(5, 9)X(7, 9),
        X(5, 1)X(7, 1),
        X(5, 13)X(7, 13)X(5, 11)X(7, 11),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(7, 11)X(9, 11)X(7, 9)X(9, 9),
        X(7, 13)X(9, 13),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(9, 1)X(11, 1),
        X(9, 13)X(11, 13)X(9, 11)X(11, 11),
        X(9, 5)X(11, 5)X(9, 3)X(11, 3),
        X(9, 9)X(11, 9)X(9, 7)X(11, 7),
        Z(1, 11)Z(3, 11),
        Z(1, 13)Z(1, 11),
        Z(1, 3)Z(3, 3)Z(1, 1)Z(3, 1),
        Z(1, 5)Z(1, 3),
        Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
        Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
        Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
        Z(13, 11)Z(13, 9),
        Z(13, 3)Z(13, 1),
        Z(13, 7)Z(13, 5),
        Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
        Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
        Z(3, 7)Z(1, 5)Z(3, 5),
        Z(5, 11)Z(7, 11)Z(5, 9)Z(7, 9),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 5)Z(3, 7)Z(7, 5)Z(7, 7)Z(5, 9),
        Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
        Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
        Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
      }),
      tuple(
        5,
        6,
      ),
    ),
  ])
# ---
# name: test_edge_hole_touches_closed_hole_9
  list([
    tuple(
      set({
        X(1, 1)X(3, 1),
        X(1, 13)X(3, 13)X(1, 11)X(3, 11),
        X(11, 11)X(13, 11)X(11, 9)X(13, 9),
        X(11, 13)X(13, 13),
        X(11, 3)X(13, 3)X(11, 1)X(13, 1),
        X(11, 7)X(13, 7)X(11, 5)X(13, 5),
        X(3, 11)X(5, 11)X(3, 9)X(5, 9),
        X(3, 13)X(5, 13),
        X(3, 3)X(5, 3)X(3, 1)X(5, 1),
        X(3, 5)X(5, 5)X(3, 7)X(5, 7),
        X(5, 1)X(7, 1),
        X(5, 13)X(7, 13)X(5, 11)X(7, 11),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(5, 9)X(7, 9)X(5, 7)X(7, 7),
        X(7, 11)X(9, 11)X(7, 9)X(9, 9),
        X(7, 13)X(9, 13),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(9, 1)X(11, 1),
        X(9, 13)X(11, 13)X(9, 11)X(11, 11),
        X(9, 5)X(11, 5)X(9, 3)X(11, 3),
        X(9, 9)X(11, 9)X(9, 7)X(11, 7),
        Z(1, 11)Z(3, 11)Z(3, 9),
        Z(1, 13)Z(1, 11),
        Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
        Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
        Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
        Z(13, 11)Z(13, 9),
        Z(13, 3)Z(13, 1),
        Z(13, 7)Z(13, 5),
        Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
        Z(3, 3)Z(1, 1)Z(3, 1),
        Z(3, 5)Z(3, 7),
        Z(3, 5)Z(5, 5)Z(3, 3)Z(5, 3),
        Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
        Z(5, 11)Z(7, 11)Z(5, 9)Z(7, 9),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
        Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
        Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
        Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
      }),
      tuple(
        6,
        7,
      ),
    ),
    tuple(
      set({
        X(1, 1)X(3, 1),
        X(1, 13)X(3, 13)X(1, 11)X(3, 11),
        X(1, 7)X(3, 7)X(1, 9)X(3, 9),
        X(11, 11)X(13, 11)X(11, 9)X(13, 9),
        X(11, 13)X(13, 13),
        X(11, 3)X(13, 3)X(11, 1)X(13, 1),
        X(11, 7)X(13, 7)X(11, 5)X(13, 5),
        X(3, 11)X(5, 11)X(3, 9)X(5, 9),
        X(3, 13)X(5, 13),
        X(3, 3)X(5, 3)X(3, 1)X(5, 1),
        X(5, 1)X(7, 1),
        X(5, 13)X(7, 13)X(5, 11)X(7, 11),
        X(5, 5)X(7, 5)X(5, 3)X(7, 3),
        X(5, 9)X(7, 9)X(5, 7)X(7, 7),
        X(7, 11)X(9, 11)X(7, 9)X(9, 9),
        X(7, 13)X(9, 13),
        X(7, 3)X(9, 3)X(7, 1)X(9, 1),
        X(7, 7)X(9, 7)X(7, 5)X(9, 5),
        X(9, 1)X(11, 1),
        X(9, 13)X(11, 13)X(9, 11)X(11, 11),
        X(9, 5)X(11, 5)X(9, 3)X(11, 3),
        X(9, 9)X(11, 9)X(9, 7)X(11, 7),
        Z(1, 11)Z(3, 11)Z(1, 9)Z(3, 9),
        Z(1, 13)Z(1, 11),
        Z(1, 7)Z(3, 7),
        Z(1, 9)Z(1, 7),
        Z(11, 13)Z(13, 13)Z(11, 11)Z(13, 11),
        Z(11, 5)Z(13, 5)Z(11, 3)Z(13, 3),
        Z(11, 9)Z(13, 9)Z(11, 7)Z(13, 7),
        Z(13, 11)Z(13, 9),
        Z(13, 3)Z(13, 1),
        Z(13, 7)Z(13, 5),
        Z(3, 13)Z(5, 13)Z(3, 11)Z(5, 11),
        Z(3, 3)Z(1, 1)Z(3, 1),
        Z(3, 9)Z(5, 9)Z(3, 7)Z(5, 7),
        Z(5, 11)Z(7, 11)Z(5, 9)Z(7, 9),
        Z(5, 3)Z(7, 3)Z(5, 1)Z(7, 1),
        Z(5, 5)Z(3, 3)Z(5, 3),
        Z(5, 7)Z(7, 7)Z(5, 5)Z(7, 5),
        Z(7, 13)Z(9, 13)Z(7, 11)Z(9, 11),
        Z(7, 5)Z(9, 5)Z(7, 3)Z(9, 3),
        Z(7, 9)Z(9, 9)Z(7, 7)Z(9, 7),
        Z(9, 11)Z(11, 11)Z(9, 9)Z(11, 9),
        Z(9, 3)Z(11, 3)Z(9, 1)Z(11, 1),
        Z(9, 7)Z(11, 7)Z(9, 5)Z(11, 5),
      }),
      tuple(
        5,
        7,
      ),
    ),
  ])
# ---
